feat: enhance search with fuzzy matching, typo tolerance, and distance sorting